--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         Send This: <br>
         <input id="message" style="height: 70%;" placeholder="Copy From Here">
     </div>
-    <div class="card1">
+    <div class="card1" style="height:fit-content;">
         Note: You will get right message only when you enter the right key!
         Copy Text From Send This Send To Someone via your message channel.
         Ask them to enter Message in Winkin...
